--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose-delete": "^0.5.2",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "password-validator": "^5.1.1"
   },
   "devDependencies": {
