--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "lodash": "^4.17.20",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.9",
     "mongoose-delete": "^0.5.2",
